chapter2/ex03/results/task4.txt

Status: FAILED!
Reason: Unable to run Payroll.py
Error:   File "/home/runner/work/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/Payroll.py", line 1
    Declare and initialize the variables:double salary = 1250.00;int numDependents = 2;double stateTax, federalTax, dependentDeduction, totalWithholding, takeHomePay;
                           ^^^
SyntaxError: invalid syntax

Timestamp: 2024-10-14 22:04:31.880089

Status: FAILED!
Reason: Unable to run Payroll.py
Error:   File "/home/runner/work/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/9780357880876_pld-10e-python-8ddb5d1b-bece-4561-9ff4-f25ea7c30294/Payroll.py", line 1
    Declare and initialize the variables:double salary = 1250.00;int numDependents = 2;double stateTax, federalTax, dependentDeduction, totalWithholding, takeHomePay;
                           ^^^
SyntaxError: invalid syntax

Timestamp: 2024-10-14 22:04:31.880204

Status: PASSED!
Check: 4
Test: Checking the program for hardcoded answers.
Reason: None
Timestamp: 2024-10-14 22:04:31.880907
